--- a/style.css
+++ b/style.css
@@ -3,10 +3,12 @@ body {
     margin: 0;
     padding: 2rem;
     background-color: #f5f5f5;
+  }
+  #main-container{
+    margin-top: 100px;
     display: flex;
     justify-content: center;
   }
-  
   section {
     max-width: 960px;
     width: 100%;
@@ -67,3 +69,26 @@ body {
     font-size: 0.95rem;
   }
   
+header {
+	background: url('http://www.autodatz.com/wp-content/uploads/2017/05/Old-Car-Wallpapers-Hd-36-with-Old-Car-Wallpapers-Hd.jpg');
+	text-align: center;
+	width: 100%;
+	height: auto;
+	background-size: cover;
+	background-attachment: fixed;
+	position: relative;
+	overflow: hidden;
+	border-radius: 0 0 85% 85% / 30%;
+}
+header .overlay{
+	width: 100%;
+	height: 100%;
+	padding: 50px;
+	color: #FFF;
+	text-shadow: 1px 1px 1px #333;
+  background-image: linear-gradient( 135deg, #9d00ff69 10%, #0084ff6b 100%);
+}
+h1 {
+	font-size: 80px;
+	margin-bottom: 30px;
+}
